--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Spiritualism'
 - !lcc 'BF'
 - !lcsh 'Occultism -- Early works to 1900'
+- GITenberg
 title: The Spirit Land
 url: http://www.gutenberg.org/ebooks/43237
